# computational-mathematics

./: pyproject.toml  teste.ipynb
assignments/: 00_linear_transformations.ipynb  01_linear_transformations.ipynb  02_02_linear_regression_pvalue_metrics.ipynb  02_1_real_zeros_of_real_functions.ipynb
colab/: 00_linear_transformations.ipynb  01_exam.ipynb  01_linear_transformations.ipynb
exams/: 01_exam.ipynb
notebooks/: 00_linear_transformations.ipynb  01_linear_transformations.ipynb  02_gradient_descent.ipynb
src/: significance_level.py
src/utils/: animate_gradient_descent.py  binary_multiply.py  binary_to_decimal.py  multiply_integers.py  plot_neural_network_curve.py  plot_vectors.py
