[project]
name = "computational-mathematics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
]

[tool.ruff]
indent-width = 4
line-length = 100
select = [
"ALL",
]
ignore = [
"D100",
"D101",
"D102",
"D103",
"D107",
"T201",
"PLR0913",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 100  

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
