[project]
name = "computational-mathematics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "mlcroissant>=1.0.22",
    "notebook>=7.5.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
	"ALL",
]
ignore = [
	"B905",
	"D100",
	"D101",
	"D103",
	"D104",
	"T201",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"